[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24_Label.tres" type="Theme" id=1]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DisassembleTooltip_1.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/Textures_v2/DisassembleNewTooltip/frame_tooltip.png" type="Texture" id=6]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=7]
[ext_resource path="res://gui_modules/Universal/Scripts/ItemTooltipV2.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[node name="ItemTooltipV2" type="Panel"]
margin_right = 550.0
margin_bottom = 630.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 550.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Item Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconFrame" type="TextureRect" parent="."]
margin_left = 174.125
margin_top = 52.0
margin_right = 374.125
margin_bottom = 252.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="IconFrame"]
margin_left = 8.0
margin_top = 7.0
margin_right = 194.0
margin_bottom = 193.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoText" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 295.0
margin_right = 541.0
margin_bottom = 408.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoText2" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 427.0
margin_right = 541.0
margin_bottom = 574.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoText3" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 295.0
margin_right = 541.0
margin_bottom = 574.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldShift" type="Label" parent="."]
anchor_top = 1.002
anchor_bottom = 1.002
margin_left = 9.0
margin_top = -41.0171
margin_right = 218.0
margin_bottom = -9.01709
custom_colors/font_color = Color( 0.678431, 0.678431, 0.678431, 1 )
custom_fonts/font = SubResource( 2 )
text = "Hold shift for details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -130.294
margin_top = -56.0
margin_right = -72.2944
margin_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Cost"]
margin_left = 48.6366
margin_top = 13.0
margin_right = 101.637
margin_bottom = 45.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0.929412, 0, 1 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "text"
